test/importers/invalid/requires_column_header_importer.rb
class RequiresColumnHeaderImporter < CSVParty::Importer
  column :product, as: :boolean
end
